# optic_frontend

./: Cargo.toml  README.md  index.html  styles.css
src/: components.rs  lib.rs  main.rs  model.rs  request.rs
src/components/: calculations.rs  frame_brand.rs  mod.rs  sale.rs  sale_kind.rs
