[package]
name = "optic_frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = '1'
leptos = '0.2'
reqwasm = '0.5'
serde = {version = '1', features = ['derive']}
log = '0.4'
console_log = '1.0'
console_error_panic_hook = '0.1'
chrono = { version = '0.4', features = ['serde'] }
serde_json = '1'

[dev-dependencies]
wasm-bindgen-test = '0.3'